# mcp-tool-guard

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  backlog.md  demo-guard.md  firstslice.md  immediate-nest-step.md  local-smoke-sliceB.md  new-test.md  package-lock.json  package.json  prod-smoke-sliceA.md  prod-smoke-sliceB.md  railway.toml  readme-local.md  readme-peter.md  readme-peter99.md  readme-pk.md  readme5.md  redme03.md  render.yaml  smoke-pat-prod.md  smoke-sliceA.md  smoke-test-claude-ops-live.md  smole-prodslice4.md  yehhaw-claude-code.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: ARCHITECTURE.md  CONCEPT.md  MCPToolGuard-Team-Overview.pptx  NEXT-STEPS.md  RELEASE.md  ROADMAP.md  auth0-env.example  auth0-setup.md  claude-code-demo.md  claude-code-integration.md  cursor-guide.md  demo-proxy.md  deploy-overview.md  ephemeral-k3d-ci.md  guard-proxy.md  identity.md  kv-design.md  otel.md  overview.pptx  railway-deploy.md  render-deploy.md  track2-github-proof.md  track3-approval-queue-proof.md  vercel-deploy.md
gateway/: Dockerfile  admin-auth.ts  agent-secrets.ts  agent-store.ts  auth0-mgmt.ts  config-resolver.ts  config.prod.yaml  config.yaml  env.ts  guard.ts  http-helpers.ts  idp-adapter.ts  index.ts  kv.ts  llm-proxy.ts  logger.ts  mcp-upstream.ts  package.json  pending-store.ts  proxy-routes-audit.ts  (+13 more)
servers/documents/: guard.py  guard_config.yaml  guard_middleware.py  kv_store.py  mock_data.py  pyproject.toml  server.py  vercel.json
servers/documents/api/: index.py
(+103 files in other folders)
