[project]
name = "documents-mcp"
version = "0.1.0"
description = "Mock Documents MCP server for MCPToolGuard multi-server demos"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.0",
    "pyjwt[crypto]>=2.8.0",
    "pyyaml>=6.0.0",
    "upstash-redis>=1.0.0",
]

[tool.uv]
package = false
